integrated authentication via cookie in spring security...

--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -8,4 +8,9 @@ spring.datasource.password=user
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.show_sql=true
 
-#server.servlet.context-path=/
+#spring.data.rest.basePath=/api
+
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.resources.add-mappings=false
+
+server.servlet.context-path=/
