implemented functional client part of app security

--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -8,9 +8,6 @@ spring.datasource.password=user
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.show_sql=true
 
-#spring.data.rest.basePath=/api
-
-#spring.mvc.throw-exception-if-no-handler-found=true
-#spring.resources.add-mappings=false
 
 server.servlet.context-path=/
+server.servlet.session.cookie.http-only=false
