add sending mail functionality for credentials, add loaders, add transactions component and refactoring

--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.datasource.password=user
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.show_sql=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=payten.mail.sender@gmail.com
+spring.mail.password=payten123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.servlet.context-path=/
 server.servlet.session.cookie.http-only=false
