--- a/instapay-client/package.json
+++ b/instapay-client/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -29,7 +30,6 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
@@ -39,7 +39,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^1.2.1"
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.20.0",
