--- a/instapay-client/package.json
+++ b/instapay-client/package.json
@@ -7,7 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint src --ext js",
+    "lint:fix": "eslint --fix src"
   },
   "browserslist": {
     "production": [
@@ -35,18 +36,18 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.8",
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.1",
+    "prettier-eslint": "^11.0.0"
   },
   "husky": {
     "hooks": {
@@ -55,10 +56,7 @@
   },
   "lint-staged": {
     "*.+(js|jsx)": [
-      "eslint --fix"
-    ],
-    "*.+(json|css|md)": [
-      "prettier --write"
+      "npm run lint:fix"
     ]
   }
 }
