--- a/instapay-client/package.json
+++ b/instapay-client/package.json
@@ -2,6 +2,7 @@
   "name": "instapay-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/ips",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
