fixed local version for cookie expiration and cors issues for POST req

--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.mail.password=payten123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.servlet.context-path=/
+server.servlet.context-path=/ips
 server.servlet.session.cookie.http-only=false
