--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;Database=InstantPayment
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.url=jdbc:sqlserver://172.17.2.114;Database=InstantPayment
+spring.datasource.username=instant
+spring.datasource.password=P@yment2019
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2008Dialect
 spring.jpa.properties.hibernate.show_sql=true
 
 spring.mail.host=smtp.gmail.com
@@ -15,5 +15,6 @@ spring.mail.password=payten123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.servlet.context-path=/ips
+server.servlet.context-path=/ips/
+spring.resources.static-locations=classpath:/public/
 server.servlet.session.cookie.http-only=false
