--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
 
+#SQL SERVER - InstantPayment - Test DB
+
+#spring.datasource.url=jdbc:sqlserver://172.17.2.114;Database=InstantPayment
+#spring.datasource.username=instant
+#spring.datasource.password=P@yment2019
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2008Dialect
+
 spring.datasource.url=jdbc:sqlserver://localhost:1433;Database=InstantPayment
 spring.datasource.username=user
 spring.datasource.password=user
