ACQ_Users table and merchant credentials

--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.jpa.properties.hibernate.show_sql=true
 
 #server.servlet.context-path=/ips
 
+spring.jpa.properties.hibernate.proc.param_null_passing=true
+
 #Root directory for file access in birt-spring-boot-starter
 birt.runner.workspace=./birt-engine-workspace
 
