--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -15,8 +15,6 @@ spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.show_sql=true
 
-#server.servlet.context-path=/ips
-
 spring.jpa.properties.hibernate.proc.param_null_passing=true
 
 #Root directory for file access in birt-spring-boot-starter
@@ -54,5 +52,5 @@ spring.mail.password=payten123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.servlet.context-path=/ips
+server.servlet.context-path=/ips/
 server.servlet.session.cookie.http-only=false
