Bulk import, e2e input and bug fix

--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -8,6 +8,10 @@
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
 spring.datasource.username=C##PETAR
 spring.datasource.password=petar
+
+#spring.datasource.url=jdbc:oracle:thin:@172.17.2.53:1521/XE
+#spring.datasource.username=insta_pay
+#spring.datasource.password=pay123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #hibernate config
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
