--- a/instapay-api/pom.xml
+++ b/instapay-api/pom.xml
@@ -45,14 +45,14 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>3.17</version>
+            <version>3.9</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml &ndash;&gt;-->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>3.17</version>
+            <version>3.9</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -66,6 +66,12 @@
             <groupId>com.innoventsolutions.birt-spring-boot</groupId>
             <artifactId>birt-spring-boot-starter</artifactId>
             <version>0.0.7</version>
+            <exclusions>
+                <exclusion>
+                        <groupId>com.innoventsolutions.birt.runtime</groupId>
+                        <artifactId>org.apache.poi_3.9.0.v201405241750</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--        <dependency>-->
