--- a/instapay-api/src/main/resources/application.properties
+++ b/instapay-api/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
 spring.datasource.username=C##PETAR
-spring.datasource.password=petar
+spring.datasource.password=2105960
 
 #spring.datasource.url=jdbc:oracle:thin:@172.17.2.53:1521/XE
 #spring.datasource.username=insta_pay
